test/arrays/compilerErrors/opCount-sparse.chpl

var RectSparseDom: sparse subdomain(LocaleSpace);
var RectSparseArr: [RectSparseDom] int;

writeln(RectSparseArr # 1);
