test/arrays/compilerErrors/opCount-sparse.good
opCount-sparse.chpl:5: error: cannot apply '#' to associative and sparse domains and arrays
